// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doTree js Should parse TSX file and extract strings 1`] = `
SetOfBlocks {
  "blocks": [
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/block/javascript.js:7",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Simple Block",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "extracted": [],
        "flag": "",
        "previous": [],
        "reference": [
          "tests/fixtures/block/javascript.js:13",
          "tests/fixtures/block/javascript.js:19",
        ],
        "translator": [],
      },
      "msgctxt": undefined,
      "msgid": "Hello World",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
  ],
  "path": "tests/fixtures/block/javascript.js",
}
`;

exports[`doTree php Should parse TSX file and extract strings 1`] = `
SetOfBlocks {
  "blocks": [
    Block {
      "comments": {
        "extracted": [],
        "flag": "",
        "previous": [],
        "reference": [
          "tests/fixtures/sourcedir/file.php:3",
          "tests/fixtures/sourcedir/file.php:7",
        ],
        "translator": [
          "ciao!",
          "ciao2!",
        ],
      },
      "msgctxt": undefined,
      "msgid": "sdasdasdasd",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "extracted": [],
        "flag": "",
        "previous": [],
        "reference": [
          "tests/fixtures/sourcedir/file.php:33",
          "tests/fixtures/sourcedir/file.php:118",
        ],
        "translator": [
          "ciao3",
        ],
      },
      "msgctxt": undefined,
      "msgid": "strong magenta",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "extracted": [],
        "flag": "",
        "previous": [],
        "reference": [
          "tests/fixtures/sourcedir/file.php:39",
          "tests/fixtures/sourcedir/file.php:123",
        ],
        "translator": [
          "ciao4",
        ],
      },
      "msgctxt": undefined,
      "msgid": "light grayish magenta",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "extracted": [],
        "flag": "",
        "previous": [],
        "reference": [
          "tests/fixtures/sourcedir/file.php:44",
          "tests/fixtures/sourcedir/file.php:128",
        ],
        "translator": [],
      },
      "msgctxt": undefined,
      "msgid": "very light gray",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "extracted": [],
        "flag": "",
        "previous": [],
        "reference": [
          "tests/fixtures/sourcedir/file.php:49",
          "tests/fixtures/sourcedir/file.php:133",
        ],
        "translator": [],
      },
      "msgctxt": undefined,
      "msgid": "very dark gray",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/sourcedir/file.php:179",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Vivid cyan blue to vivid purple",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/sourcedir/file.php:184",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Vivid green cyan to vivid cyan blue",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/sourcedir/file.php:189",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Light green cyan to vivid green cyan",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/sourcedir/file.php:194",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Luminous vivid amber to luminous vivid orange",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/sourcedir/file.php:199",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Luminous vivid orange to vivid red",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/sourcedir/file.php:237",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Small",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/sourcedir/file.php:242",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Regular",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/sourcedir/file.php:247",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Large",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/sourcedir/file.php:252",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Huge",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
  ],
  "path": "tests/fixtures/sourcedir/file.php",
}
`;

exports[`doTree php test file should extract translations and comments from code content 1`] = `
Block {
  "comments": {
    "reference": [
      "filename.php:4",
    ],
    "translator": undefined,
  },
  "msgctxt": undefined,
  "msgid": "Foo Bar",
  "msgid_plural": undefined,
  "msgstr": [
    "",
  ],
}
`;

exports[`doTree tsx file Should parse TSX file and extract strings 1`] = `
SetOfBlocks {
  "blocks": [
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/block/SvgControls.tsx:93",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Edit Link",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/block/SvgControls.tsx:99",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Unlink",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
    Block {
      "comments": {
        "reference": [
          "tests/fixtures/block/SvgControls.tsx:107",
        ],
        "translator": undefined,
      },
      "msgctxt": undefined,
      "msgid": "Replace SVG",
      "msgid_plural": undefined,
      "msgstr": [
        "",
      ],
    },
  ],
  "path": "tests/fixtures/block/SvgControls.tsx",
}
`;
